# hdrnet-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
CMake/: FindSGL.cmake  FindTensorFlow.cmake
Data/: pretrained_models.txt
Data/Shaders/: ApplyCoefficients.glsl  Blit.glsl  BlitMSAA.glsl  GammaCorrection.glsl  GaussianBlur.glsl  Mesh.glsl  ResolveMSAA.glsl  WhiteSolid.glsl
src/: FrameData.hpp  GridPredictor.cpp  GridPredictor.hpp  GridRenderer.cpp  GridRenderer.hpp  Main.cpp  MainApp.cpp  MainApp.hpp  Webcam.cpp  Webcam.hpp  main.cpp
